--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
 .background {
   width: 100%;
   height: 100vh;
-  background-image: url("public/aerial-photography-mountain-viewing-full-moon.jpg");
+  background-image: url("./public/aerial-photography-mountain-viewing-full-moon.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -10,7 +10,7 @@
 .registerbg {
   width: 100%;
   height: 100vh;
-  background-image: url("public/view-land-galapagos-islands-ecuador.jpg");
+  background-image: url("./public/view-land-galapagos-islands-ecuador.jpg");
   background-size: cover;
   background-position: center;
 }
