--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,36 @@
 .registerbg {
   width: 100%;
   height: 100vh;
-  background-image: url("./public/view-land-galapagos-islands-ecuador.jpg");
+  background-image: url("./public/aerial-photography-mountain-viewing-full-moon.jpg");
   background-size: cover;
   background-position: center;
+}
+
+.animated-background {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, sans-serif;
+  overflow: hidden;
+
+  /* Gradient animatsiyasi */
+  background: linear-gradient(45deg, #ff9a9e, #fad0c4, #fad0c4, #fbc2eb);
+  background-size: 400% 400%;
+  animation: gradientAnimation 8s ease infinite;
+}
+
+/* Animatsiya uchun kalit kadrlar */
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
